syntax = "proto3";

package vancats.raft;

import "google/protobuf/empty.proto";
import "scalapb/scalapb.proto";

option (scalapb.options) = {
  scope: PACKAGE
  flat_package: true
  preserve_unknown_fields: false
};

service Raft {
  rpc RequestVote (RequestVoteRequest) returns (RequestVoteReply) {}
  rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesReply) {}
  rpc ServiceClient (ServiceClientRequest) returns (google.protobuf.Empty) {}
}

message RequestVoteRequest {
  int32 term = 1;
  int32 candidate_id = 2;
  int32 next_log_index = 3;
  int32 last_log_term = 4;
}

message RequestVoteReply {
  int32 term = 1;
  bool vote_granted = 2;
}

message AppendEntriesRequest {
  int32 term = 1;
  int32 leader_id = 2;
  int32 log_index = 3;
  int32 prev_log_term = 4;
  repeated LogEntry entries = 5;
  int32 leader_commit = 6;
}

message AppendEntriesReply {
  int32 term = 1;
  bool success = 2;
}

message LogEntry {
  int32 term = 1;
  bytes command = 2;
}

message ServiceClientRequest {
  bytes command = 1;
}
